tests/strict_mode/strict_mode.exp
Error ------------------------------------------------------------- test.js:3:15

Importing a type from an untyped module makes it `any` and is not safe! Did you
mean to add `// @flow` to the top of `./import`? (`untyped-type-import`)

Error: test.js:3
  3: import type { T } from './import';
                   ^ Importing a type from an untyped module makes it `any` and is not safe! Did you mean to add `// @flow` to the top of `./import`? (`untyped-type-import`)

Error -------------------------------------------------------------- test.js:8:3

Cannot reassign constant `x`.

Error: test.js:8
  8:   x = 1;
       ^ Cannot reassign constant `x` [1].
  References:
    7: function f(x) {
                  ^ [1]: `x`


Found 2 errors
